--- a/index.html
+++ b/index.html
@@ -3,11 +3,21 @@
     <head>
         <meta charset="UTF-8">
         <title>Barbearia Alura</title>
+        <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="home.css">
     </head>
     <body>
         <header>
-           <h1 class="títuloPrinc">Barbearia Alura</h1>
+            <div class="caixa">
+                <h1><img src="img/logo.png"></h1>
+                <nav>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="produtos.html">Produtos</a></li>
+                        <li><a href="contato.html">Contato</a></li>
+                    </ul>
+                </nav>
+            </div>
         </header>
         <img id="banner" src="banner.jpg">
         <div class="princ">
