--- a/produtos.html
+++ b/produtos.html
@@ -9,7 +9,7 @@
     <body>
         <header>
             <div class="caixa">
-                <h1><img src="img/logo.png"></h1>
+                <h1><img src="logo.png"></h1>
                 <nav>
                     <ul>
                         <li><a href="index.html">Home</a></li>
@@ -23,26 +23,26 @@
             <ul class="produtos">
             <li>
                 <h2>Cabelo</h2>
-                <img src="img/cabelo.jpg">
+                <img src="cabelo.jpg">
                 <p class="dsr">Na tesoura ou máquina, como o cliente preferir</p>
                 <p class="preco">R$25,00</p>
             </li>
             <li>
                 <h2>Barba</h2>
-                <img src="img/barba.jpg">
+                <img src="barba.jpg">
                 <p class="dsr">Corte e desenho profissional de barba</p>
                 <p class="preco">R$18,00</p>
             </li>
             <li>
                 <h2>Cabelo + Barba</h2>
-                <img src="img/cabelo+barba.jpg">
+                <img src="cabelo+barba.jpg">
                 <p class="dsr">Pacote completo de cabelo e barba</p>
                 <p class="preco">R$35,00</p>
             </li>
             </ul>
         </main>
         <footer>
-            <img src="img/logo-branco.png">
+            <img src="logo-branco.png">
             <p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
         </footer>
     </body>
