--- a/contato.html
+++ b/contato.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="caixa">
-            <h1><img src="img/logo.png"></h1>
+            <h1><img src="logo.png"></h1>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -45,7 +45,7 @@
         </form>
     </main>
     <footer>
-        <img src="img/logo-branco.png">
+        <img src="logo-branco.png">
         <p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
     </footer>
  </body>
